# dutch-mt-benchmarks

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/en-nl/tatoeba_mt/: Helsinki-NLP--opus-mt-en-nl.yaml  facebook--mbart-large-50-many-to-many-mmt.yaml  facebook--nllb-200-distilled-600M.yaml  yhavinga--ul2-large-en-nl-v3.yaml
results/en-nl/tatoeba_mt/Helsinki-NLP--opus-mt-en-nl/v1/: config.yaml  translate_info.json  translations.jsonl
results/en-nl/tatoeba_mt/facebook--mbart-large-50-many-to-many-mmt/v1/: config.yaml  translate_info.json  translations.jsonl
results/en-nl/tatoeba_mt/facebook--nllb-200-distilled-600M/v1/: config.yaml  translate_info.json  translations.jsonl
results/en-nl/tatoeba_mt/yhavinga--ul2-large-en-nl-v3/v1/: config.yaml  translate_info.json  translations.jsonl
src/mt_benchmarks/: cli_parser.py
src/mt_benchmarks/evaluation/: evaluate.py  evaluate_config.py
src/mt_benchmarks/translation/: translate.py  translate_config.py  utils.py
